test_regress/t/t_alias2_unsup.out
%Error: Internal Error: t/t_alias2_unsup.v:39:10: ../V3Localize.cpp:#: AstVarRef not under function
   39 |    alias b = {a[3:0],a[7:4]};
      |          ^
                        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
